assets/css/style.css
* {
    background-color: white;
    position:relative;
}

.container-fluid{
    height:20vh;
}

.headerRow {
    margin-top:2%;
    color:white;
    font-weight: bold;
}

/* #header h1 {

} */

#header p {
 font-size: 40px;
}

.mainContent {
    min-height:70vh;
}

#image {
    width:100%;
}

#submitButton {
    font-weight:bold;
    color:dodgerblue
}

#Character {
    padding: 0;
}

#footer{
    height:10vh;
    text-align: center;
    background-color:dodgerblue;
    color:white
}

.page-footer img {
    width: 30px;
    height: auto;
}

.jumbotron {
    background-image: url('../img/emo.jpg');
    background-size: cover;
    min-height: 190px;
    background-blend-mode: color;
    background-color:rgba(0,0,0,0.2) !important;
}

#header {
    padding: 0;
}

.headerRow{
    background-color:transparent;
}

.imageHolder img {
    max-width:100%;
    max-height:100%;
}

#movies.card-deck .card {
    flex: auto;
    flex-grow: 0;
}

#movies {
    display: flex;
    justify-content: space-around;
}

